--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Exact.ExactActivity">
+    tools:context=".content.ExactActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
