--- a/app/src/main/res/layout/activity_music_select.xml
+++ b/app/src/main/res/layout/activity_music_select.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="false"
     android:layout_height="match_parent"
+
     tools:context=".music.MusicSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -12,17 +14,17 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:overScrollMode="never"
+         />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="87dp"
-        android:layout_height="35dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="42dp"
         android:gravity="center"
         android:text="返回"
         android:textSize="20sp"
@@ -31,9 +33,9 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="87dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="24dp"
         android:gravity="center"
         android:text="完成"
