--- a/app/src/main/res/layout/musictab_item.xml
+++ b/app/src/main/res/layout/musictab_item.xml
@@ -8,14 +8,13 @@
 
     <ImageView
         android:id="@+id/EmotionPhoto"
-        android:layout_width="443dp"
-        android:layout_height="859dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+ />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
