--- a/app/src/main/res/layout/activity_music_select.xml
+++ b/app/src/main/res/layout/activity_music_select.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
-
+    android:id="@+id/musicSelectLayout"
     tools:context=".music.MusicSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
