--- a/app/src/main/res/layout/activity_music_select.xml
+++ b/app/src/main/res/layout/activity_music_select.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="false"
     android:layout_height="match_parent"
-
+    android:id="@+id/musicSelectLayout"
     tools:context=".music.MusicSelectActivity">
 
     <androidx.recyclerview.widget.RecyclerView
