Drag-and-drop improvement, EditActivity;

--- a/app/src/main/res/layout/musicdesign_item.xml
+++ b/app/src/main/res/layout/musicdesign_item.xml
@@ -7,7 +7,7 @@
     >
 
 
-    <com.hustunique.musica.RoundImage
+    <com.hustunique.musica.util.RoundImage
         android:id="@+id/RoundIcon"
         android:layout_width="118dp"
         android:layout_height="62dp"
