--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="12dp"
     android:layout_marginHorizontal="12dp"
-    app:cardCornerRadius="6dp"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_marginVertical="12dp"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="6dp">
 
 
     <LinearLayout
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="3dp">
 
 
         <ImageView
