update UI of content

--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -25,13 +25,27 @@
             android:layout_width="match_parent"
             android:layout_height="10dp" />
 
-        <ImageView
-            android:id="@+id/PhotoTitle"
+
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="159dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            tools:srcCompat="@drawable/orange" />
+            android:layout_height="150dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            app:cardCornerRadius="10dp"
+            >
+
+            <ImageView
+                android:id="@+id/PhotoTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                tools:srcCompat="@drawable/orange" />
+
+
+        </androidx.cardview.widget.CardView>
+
+
 
         <TextView
             android:id="@+id/TextDate"
