--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -22,12 +22,12 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:layout_constraintVertical_bias="0.0">
 
-        <TextView
+        <EditText
             android:id="@+id/textView11"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|start"
-            android:text="TextView"
+            android:hint="标题"
             android:textSize="20sp" />
     </androidx.cardview.widget.CardView>
 
@@ -66,7 +66,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:gravity="center|left|center_vertical"
-                android:text="TextView"
+                android:text="添加图片"
                 android:textSize="20sp" />
         </LinearLayout>
 
