--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,12 +40,12 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="47dp"
-            android:layout_height="45dp"
-            android:layout_marginEnd="32dp"
+            android:layout_width="29dp"
+            android:layout_height="33dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView2"
-            app:srcCompat="@android:drawable/ic_menu_info_details" />
+            app:srcCompat="@drawable/outline_settings_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
