--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <color name="colorBackground">#FFAAAAAA</color>
-
+    <color name="colorDelete">@color/cardview_shadow_end_color</color>
 
 </resources>
