--- a/app/src/main/res/layout/musicdesign_item.xml
+++ b/app/src/main/res/layout/musicdesign_item.xml
@@ -3,12 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
 
-    <com.hustunique.morii.util.RoundImage
-        android:id="@+id/RoundIcon"
+    <!--com.hustunique.morii.util.RoundImage
         android:layout_width="118dp"
         android:layout_height="62dp"
         android:layout_marginBottom="4dp"
@@ -17,27 +15,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/orange" />
+        tools:srcCompat="@drawable/orange" -->
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginHorizontal="12dp"
+        android:id="@+id/RoundIcon"
+        app:layout_constraintBottom_toTopOf="@+id/IconName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/orange" />
 
     <TextView
         android:id="@+id/IconName"
-        android:layout_width="77dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="4dp"
-        android:foregroundGravity="center"
-        android:gravity="center"
-        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="94dp"
-        android:layout_height="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/RoundIcon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
