--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -13,8 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="21dp"
+        android:layout_marginVertical="12dp"
         android:hint="标题"
-        app:layout_constraintTop_toBottomOf="@id/cardView">
+        app:layout_constraintTop_toBottomOf="@id/addPhotoButton">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextTitle"
@@ -26,46 +27,45 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/addPhotoButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginVertical="16dp"
         android:layout_marginEnd="32dp"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="#99DDD8D8"
         app:cardCornerRadius="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_hour"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/textView_hour">
 
-        <LinearLayout
-            android:id="@+id/linearLayouts"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/addPhoto"
+                android:id="@+id/addPhotoIcon"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_marginHorizontal="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_add_circle_24" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="9"
-                android:gravity="center|left|center_vertical"
+                android:layout_height="wrap_content"
                 android:text="添加图片"
-                android:textSize="20sp" />
-        </LinearLayout>
+                android:textSize="20sp"
+                android:layout_marginHorizontal="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/addPhotoIcon"
+                app:layout_constraintTop_toTopOf="parent" />
 
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
 
@@ -231,7 +231,7 @@
             android:id="@+id/BigPhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"></ImageView>
+            android:scaleType="centerCrop" />
 
     </androidx.cardview.widget.CardView>
 
