--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -144,7 +144,7 @@
         android:layout_height="0dp"
         android:background="#80F50303"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerView03"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/recyclerView03"
