Added cool transitions for MainActivity

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -71,22 +71,23 @@
 
 
     <androidx.cardview.widget.CardView
+        android:transitionName="photo"
         android:id="@+id/CardView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="21dp"
         app:cardCornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleBarLayout_content">
 
         <ImageView
             android:id="@+id/PhotoShow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            tools:srcCompat="@drawable/orange" />
+            android:src="@drawable/orange"
+             />
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
